--- a/MainWindow.xib
+++ b/MainWindow.xib
@@ -49,9 +49,10 @@
 						<object class="IBUIButton" id="418150823">
 							<reference key="NSNextResponder" ref="755430557"/>
 							<int key="NSvFlags">292</int>
-							<string key="NSFrame">{{281, 318}, {19, 19}}</string>
+							<string key="NSFrame">{{271, 315}, {35, 28}}</string>
 							<reference key="NSSuperview" ref="755430557"/>
 							<bool key="IBUIOpaque">NO</bool>
+							<bool key="IBUIAutoresizesSubviews">NO</bool>
 							<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 							<int key="IBUIContentHorizontalAlignment">0</int>
 							<int key="IBUIContentVerticalAlignment">0</int>
@@ -60,6 +61,7 @@
 								<double key="NSSize">15</double>
 								<int key="NSfFlags">16</int>
 							</object>
+							<bool key="IBUIShowsTouchWhenHighlighted">YES</bool>
 							<object class="NSColor" key="IBUIHighlightedTitleColor">
 								<int key="NSColorSpace">3</int>
 								<bytes key="NSWhite">MQA</bytes>
